chore: Update dev dependencies for pylint and black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "pylint>=3.2.6",
+    "black>=24.4.2",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
