--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = [
-    "pylint>=3.2.6",
     "black>=24.4.2",
+    "ruff>=0.5.6",
 ]
 
 [tool.hatch.metadata]
