--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dev-dependencies = [
     "ruff>=0.5.6",
 ]
 
+[tool.ruff.lint]
+select = ["F","I","W","N"]
+
 [tool.hatch.metadata]
 allow-direct-references = true
 
