--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dev-dependencies = [
 ]
 
 [tool.ruff.lint]
-select = ["F","I","W","N"]
+select = ["F","W","N","UP","B","SIM","I"]
 
 [tool.hatch.metadata]
 allow-direct-references = true
