chore: Add pick dependency with version 2.3.2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "A Python source code obfuscator based on AST."
 authors = [
     { name = "yixinBC", email = "yixinbc@foxmail.com" }
 ]
-dependencies = []
+dependencies = [
+    "pick>=2.3.2",
+]
 readme = "README.md"
 requires-python = ">= 3.10"
 license = { text = "GPL-3.0" }
